refactor(dropping): 투표드랍에 songId 제거